feat(theme): add Emotion cache and custom MUI theme
- Implemented createEmotionCache to manage Emotion styles.
- Defined a custom MUI theme with light mode, primary and secondary colors, and typography settings.
- Customized MUI components including Button, AppBar, and Container with specific styles and default properties.

--- a/content/cluster-ingressando/requisitos-vigilante-2025.mdx
+++ b/content/cluster-ingressando/requisitos-vigilante-2025.mdx
@@ -15,25 +15,25 @@ breadcrumb:
   - label: "Requisitos 2025"
 
 schema:
-  @context: "https://schema.org"
-  @type: "Article"
+  "@context": "https://schema.org"
+  "@type": "Article"
   headline: "Quais são TODOS os Requisitos para ser Vigilante em 2025?"
   description: "Guia completo com todos os requisitos atualizados para se tornar vigilante profissional no Brasil em 2025."
   author:
-    @type: "Organization"
+    "@type": "Organization"
     name: "Ludus Magnus Cariri"
     url: "https://ludusmagnuscariri.com.br"
   publisher:
-    @type: "Organization"
+    "@type": "Organization"
     name: "Ludus Magnus Cariri"
     logo:
-      @type: "ImageObject"
+      "@type": "ImageObject"
       url: "https://formacaodevigilantes.com.br/assets/images/logo-ludus-magnus.png"
   datePublished: "2025-09-07"
   dateModified: "2025-09-07"
   mainEntityOfPage:
-    @type: "WebPage"
-    @id: "https://formacaodevigilantes.com.br/requisitos-para-ser-vigilante-2025"
+    "@type": "WebPage"
+    "@id": "https://formacaodevigilantes.com.br/requisitos-para-ser-vigilante-2025"
   image: "https://formacaodevigilantes.com.br/assets/images/requisitos-vigilante-2025.jpg"
 
 timelineSteps:
