--- a/content/cluster-ingressando/quanto-ganha-vigilante-2025.mdx
+++ b/content/cluster-ingressando/quanto-ganha-vigilante-2025.mdx
@@ -15,25 +15,25 @@ breadcrumb:
   - label: "Salários 2025"
 
 schema:
-  @context: "https://schema.org"
-  @type: "Article"
+  "@context": "https://schema.org"
+  "@type": "Article"
   headline: "Quanto Ganha um Vigilante em 2025? Salários por Região e Especialização"
   description: "Guia completo sobre salários de vigilantes no Brasil em 2025, incluindo variações por região e especialização."
   author:
-    @type: "Organization"
+    "@type": "Organization"
     name: "Ludus Magnus Cariri"
     url: "https://ludusmagnuscariri.com.br"
   publisher:
-    @type: "Organization"
+    "@type": "Organization"
     name: "Ludus Magnus Cariri"
     logo:
-      @type: "ImageObject"
+      "@type": "ImageObject"
       url: "https://formacaodevigilantes.com.br/assets/images/logo-ludus-magnus.png"
   datePublished: "2025-09-07"
   dateModified: "2025-09-07"
   mainEntityOfPage:
-    @type: "WebPage"
-    @id: "https://formacaodevigilantes.com.br/quanto-ganha-vigilante-2025"
+    "@type": "WebPage"
+    "@id": "https://formacaodevigilantes.com.br/quanto-ganha-vigilante-2025"
   image: "https://formacaodevigilantes.com.br/assets/images/salario-vigilante-2025.jpg"
 
 salaryRegions:
