feat: Add new articles on private security market and legislation updates
- Created "Mercado de Segurança Privada no Ceará e Cariri (2024/25)" article detailing market growth and formalization trends.
- Added "Novo Estatuto da Segurança Privada (Lei 14.967/2024)" article explaining changes for vigilantes and compliance requirements.
- Updated "Quanto Ganha Vigilante 2025" with new links for enrollment and training.
- Introduced "Fortaleza e RMF: Empregabilidade na Segurança Privada em 2025" focusing on job opportunities in the RMF region.
- Added "Tecnologias na Segurança Privada: IA, IoT e Monitoramento Profissional" discussing the impact of technology on security roles.

fix: Update URLs to reflect new domain for Ludus Magnus

- Changed all instances of ludusmagnuscariri.com.br to ludusmagnusvigilantes.com.br in various files.
- Updated Next.js configuration to use the new site URL.

style: Refactor global styles and theme for improved design consistency

- Unified font usage to Inter across the application.
- Enhanced theme colors and typography for better readability and aesthetics.
- Implemented design tokens for consistent styling across components.
- Improved hero section layout and styling for better user engagement.

--- a/content/cluster-ingressando/quanto-ganha-vigilante-2025.mdx
+++ b/content/cluster-ingressando/quanto-ganha-vigilante-2025.mdx
@@ -22,7 +22,7 @@ schema:
   author:
     "@type": "Organization"
     name: "Ludus Magnus Cariri"
-    url: "https://ludusmagnuscariri.com.br"
+    url: "https://www.ludusmagnusvigilantes.com.br"
   publisher:
     "@type": "Organization"
     name: "Ludus Magnus Cariri"
@@ -290,3 +290,10 @@ actionPlan:
     </section>
   </div>
 </main>
+
+## 📌 Ações Rápidas
+
+- Matrícula (geral): <a href="https://www.ludusmagnusvigilantes.com.br/landing/loja" target="_blank" rel="noopener">Acessar Loja</a>  
+- Valores e condições: <a href="https://www.ludusmagnusvigilantes.com.br/ajuda/valores-condicoes" target="_blank" rel="noopener">Ver preços</a>  
+- Reciclagem (checkout direto): <a href="https://www.ludusmagnusvigilantes.com.br/landing/loja/checkout3?cursoId=b1dabb37-853d-4308-9e8f-bce89538ab24" target="_blank" rel="noopener">Fazer Reciclagem</a>  
+- Formação (checkout direto): <a href="https://www.ludusmagnusvigilantes.com.br/landing/loja/checkout3?cursoId=19581a47-1af9-4ff9-9536-19c08e38dc4a" target="_blank" rel="noopener">Iniciar Formação</a>
